Change screen-lg media query width to 1366px to prevent primary nav wrap; adjust title and UF logo height at screen-md

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -61,6 +61,10 @@
 			background-color: $orange;
 			padding: 0;
 		}
+		@include breakFirst(large){
+			height: 50px;
+			width: 50px;
+		}
 		@include breakFirst(wide){
 			height: 150px;
 			width: 150px;
@@ -73,6 +77,10 @@
 			position: absolute;
 			top: 20px;
 			left: 15px;
+		}
+		@include breakFirst(large){
+			top: 15px;
+			left: 11px;
 		}
 		@include breakFirst(wide){
 			width: 74px;
@@ -89,13 +97,14 @@
 		padding: 0 5px 0 15px;
 		display: table;
 		position: relative;
-		// z-index: 1000;
 		z-index: 1001;
+		@include breakFirst(large){
+			height: 50px;
+		}
 		a, a:focus {
 			color: $white;
 			outline-color: $white;
 		}
-		
 		h1 {
 			font-family: quadon, Georgia, serif;
 			font-weight: 500;
